Ajout des settings de la dernière version de Fordson

--- a/scss/preset/e-Learner.scss
+++ b/scss/preset/e-Learner.scss
@@ -1,7 +1,7 @@
 
 
 //Fordson eLearning variables
-$elearningcontentbkg: rgba(255,255,255,0.9) !default;
+$elearningcontentbkg: rgba(255,255,255,0.6) !default;
 
 // Bootstrap variables
 
@@ -44,6 +44,7 @@ $dark:          $gray-800 !default;
 //$enable-rounded: false !default;
 $border-radius: 4px !default;
 
+
 // Body
 $body-color:    $gray-800 !default;
 $body-bg:       #dae6e5 !default;
@@ -63,7 +64,7 @@ $breadcrumb-padding-y:              .25rem !default;
 $breadcrumb-padding-x:              0 !default;
 $breadcrumb-item-padding:           .5rem !default;
 $breadcrumb-margin-bottom:          0 !default;
-$breadcrumb-bg:                     transparent !default;
+$breadcrumb-bg:                     $primary !default;
 $breadcrumb-divider: "/" !default;
 $breadcrumb-divider-rtl: "/" !default;
 
@@ -129,7 +130,7 @@ body {
 }
 
 a#blocksliderbutton {
-    background-color: $card-bg;
+    background-color: $primary;
 }
 
 div#learningcontent {
@@ -174,8 +175,32 @@ div#page-content {
     border-radius: 0;
 }
 
+.section-go-link {
+    padding: .25rem;
+    margin: .5rem;
+    background-color: $gray-100;
+    display: inline-block;
+    border: 1px solid $gray-300;
+}
+
 @media screen and (max-width: 576px) {
     div#learningcontent {
         padding: .25rem !important;
     }
+}
+
+div#blockslider {
+    margin-top: 1rem;
+}
+
+// Progress Bars
+
+.progress_bar {
+    background-color: $gray-100;
+    text-align: center;
+}
+
+.progress_bar_completed {
+    background-color: $primary;
+    text-align: right;
 }
