--- a/scss/fordson_variables.scss
+++ b/scss/fordson_variables.scss
@@ -14,8 +14,8 @@ $marketing3image: #fff !default;
 $marketing4image: #fff !default;
 $marketing5image: #fff !default;
 $marketing6image: #fff !default;
-$markettextbg: rgba(255, 255, 255, 0.8) !default;
 $markettile-radius: 5px !default;
+$markettextbg: rgba(255, 255, 255, 0.8) !default;
 
 $border-radius: 4px !default;
 
@@ -26,6 +26,9 @@ $blockwidthfordson: 280px !default;
 $drawer-bg: darken($body-bg, 5%) !default;
 $footer-bg: $gray-800 !default;
 $topnavbarbg: #fff !default;
+$teachernavbarcolor: #f3e420 !default;
+$studentnavbarcolor: $topnavbarbg !default;
+$breadcrumb-bg: $primary !default;
 $breadcrumb-bg-hover: darken($breadcrumb-bg, 15%) !default;
 $breadcrumb-text-color: #ffffff !default;
 
@@ -43,3 +46,10 @@ $sectionnamehighlight : #43d0f3 !default;
 $dpsaccentcolor: #44d4a6 !default;
 $sectionactivitybkg: #fdfdfd !default;
 $sectionbkg: $sectionactivitybkg !default;
+$layout5imgoverlay: rgba(0,0,0,0.5) !default;
+$spectrum-base: #3fcbda !default;
+$elearningcontentbkg: rgba(255,255,255,0.6) !default;
+
+//Preset Checks for unique styling
+$spectrumpreset: 0 !default;
+$modernmoodlepreset: 0 !default;
