--- a/scss/pagelayout/layout5.scss
+++ b/scss/pagelayout/layout5.scss
@@ -23,39 +23,42 @@
 //
 $bootstrap-sass-asset-helper: false !default;
 
+// Preset specific styling.
 
-// Variables
-$breadcrumb-bg: #fff;
-
-/**
- * For background in content areas.
- */
-
-ol.breadcrumb {
-    background-color: $breadcrumb-bg;
+@if $spectrumpreset == 1 {
+    #page-header .pt-3, #page-header .py-3 {
+        padding-top: 0!important;
+    }
+    div#page-content {
+        padding: 0 2rem;
+    }
 }
 
-#page-wrapper {
-    padding-bottom: 0; 
+@if $modernmoodlepreset == 1 {
+    #page-header .pb-3 {
+        padding-top: 0!important;
+    }
 }
 
 .page-context-header .page-header-headings {
-    background-color: $card-bg;
-    padding: 0 1rem;
-    margin-bottom: 1rem;
+    padding: .25rem .5rem;
+    background-color: $primary;
+    border-radius: .5rem;
+    margin-top: 1.25rem;
+    margin-bottom: .25rem;
+}
+
+#page-content .page-context-header .page-header-headings {
+    background-color: initial;
 }
 
 .page-context-header .page-header-headings h1 {
-    color: initial;
+    color: $white;
+    margin: 0;
 }
 
- .default {
-    background-color: rgba(0,0,0,0.3);
-    background-blend-mode: overlay;
-}
-.withimage {
-    background-color: rgba(0,0,0,0.3);
-    background-blend-mode: overlay;
+#page-site-index .page-context-header .page-header-headings {
+    background-color: transparent;
 }
 
 .headerbkg {
@@ -69,8 +72,12 @@ ol.breadcrumb {
     z-index: 0;
 }
 
-#page-header div#page-navbar {
-    z-index: 1;
+//Button fixes for display over images
+#page-header .btn.btn-secondary {
+    background-color: $white;
+}
+#page-header .btn.btn-secondary:hover {
+    background-color: darken($primary, 10%);
 }
 
 div#learningcontent {
@@ -78,18 +85,14 @@ div#learningcontent {
     background-color: transparent;
 }
 
-#page-header div#page-navbar {
-    z-index: 1;
+
+@media screen and (max-width: 576px) {
+    .breadcrumb {
+        background-color:rgba(255,255,255,0.8)!important;
+        padding: 1rem;
+    }
 }
 
-.breadcrumb {
-    padding: .5rem 1rem;
-}
-ol.breadcrumb {
-    margin: 0;
-}
-
-/* FORDSON Default Styling */
 
 // Scrollbars
 
@@ -152,18 +155,4 @@ ol.breadcrumb {
     margin: 0!important;
     border-top: 7px solid rgba(0,0,0,.2);
     border-radius: 0;
-}
-
-// Restore padding at top of page
-#page-header .pb-3 {
-    padding-bottom: 1rem!important;
-}
-#page-header .card-body {
-    padding-bottom: 1rem;
-}
-.course-content li#section-0 .content {
-    margin-top: 0;
-}
-.editing .course-content li#section-0 .content {
-    margin-top: 2rem; 
 }
