--- a/scss/preset/Modern Moodle.scss
+++ b/scss/preset/Modern Moodle.scss
@@ -59,9 +59,12 @@ $breadcrumb-padding-y:              .25rem !default;
 $breadcrumb-padding-x:              0 !default;
 $breadcrumb-item-padding:           .5rem !default;
 $breadcrumb-margin-bottom:          0 !default;
-$breadcrumb-bg:                     $primary !default;
 $breadcrumb-divider: "/" !default;
 $breadcrumb-divider-rtl: "/" !default;
+
+$breadcrumb-bg: $primary !default;
+$breadcrumb-bg-hover: darken($primary, 15%) !default;
+$breadcrumb-text-color: #ffffff !default;
 
 // Alerts
 $alert-border-width:                0 !default;
@@ -86,6 +89,9 @@ $theme-colors: (
 
 // Import Core moodle CSS
 @import "../../boost/scss/moodle";
+
+// Let theme know we are using Modern Moodle
+$modernmoodlepreset: 1;
 
 
 // Preset CSS
@@ -137,4 +143,26 @@ div#learningcontent {
 }
 .editing .course-content li#section-0 .content {
     margin-top: 2rem; 
+}
+
+.fp-blocks {
+    padding-top: 2rem;
+}
+.section-go-link {
+    padding: .25rem;
+    margin: .5rem;
+    background-color: $gray-100;
+    display: inline-block;
+    border: 1px solid $gray-300;
+}
+// Progress Bars
+
+.progress_bar {
+    background-color: $gray-100;
+    text-align: center;
+}
+
+.progress_bar_completed {
+    background-color: $primary;
+    text-align: right;
 }
