--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -139,29 +139,26 @@ div#fordsonlogin {
 
 #page-login-index #page-wrapper {
     padding-bottom: 0;
+    min-height: 100%;
 }
 
 /* Editing Block Columns */
 
 .editing aside#block-region-fp-a {
     border: 2px dashed $gray-lighter;
-    min-height: 2rem;
+    min-height: 10rem;
 }
 .editing aside#block-region-fp-b {
     border: 2px dashed $gray-lighter;
-    min-height: 2rem;
+    min-height: 10rem;
 }
 .editing aside#block-region-fp-c {
     border: 2px dashed $gray-lighter;
-    min-height: 2rem;
+    min-height: 10rem;
 }
 .editing aside#block-region-side-pre {
     border: 2px dashed $gray-lighter;
-    min-height: 2rem;
-}
-
-aside#block-region-side-pre {
-    margin-top: 2rem;
+    min-height: 10rem;
 }
 
 /* Teacher Dashboard */
@@ -241,15 +238,23 @@ div#blockslider {
     background-color: $gray-200;
     border: 1px solid $gray-400;
     padding: 1rem;
+    position: relative;
 }
 .blockpanelbtn {
     position: absolute;
     right: 0;
+    top: 0;
     z-index: 2;
 }
 .blockpanelbtn .btn:focus, .blockpanelbtn .btn-primary:focus {
     outline: 0;
     box-shadow: none !important;
+}
+
+button#blocksliderbuttonclose {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 /* Footer */
@@ -372,26 +377,6 @@ div#fpslider {
     margin: 0;
 }
 
-.markettiles {
-    margin: 1rem 0;
-}
-
-.market-tile {
-    margin: 1rem 0rem;
-    background-color: $body-bg;
-    padding: 1rem;
-    border: 1px solid $dark;
-    border-top: 7px solid;
-}
-
-.marketcontent {
-    padding: 1rem;
-    background-color: $markettextbg;
-    height: 10rem;
-    overflow: auto;
-    margin-bottom: 1rem;
-}
-
 .marketcontent::-webkit-scrollbar {
     width: 7px;
 }
@@ -474,7 +459,7 @@ form#enrolform_easy button.btn.btn-primary {
 .class-box-fp .course-title, .class-box-fp-style3 .course-title {
     background-color: $card-bg;
     padding: $spacer;
-    padding-top: 2rem;
+    padding-bottom: 0;
     margin-bottom: 0;
     text-align: center;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
@@ -500,7 +485,7 @@ form#enrolform_easy button.btn.btn-primary {
     }
 }
 
-.class-box-fp-style3 .course-title:after, .class-box-fp .course-title:after, .class-box-fp-2col .course-title-2col:after {
+/*.class-box-fp-style3 .course-title:after, .class-box-fp .course-title:after, .class-box-fp-2col .course-title-2col:after {
     text-decoration: none;
     display: block;
     content: '';
@@ -511,17 +496,25 @@ form#enrolform_easy button.btn.btn-primary {
 
 .class-box-fp-style3 .course-title:hoover:after, .class-box-fp .course-title:hover:after, .class-box-fp-2col .course-title-2col:hover:after {
     transform: scaleX(1);
-}
+}*/
 
 .courseimagecontainer {
     height: calc(45%);
 }
 
-.class-box {
+.class-box4 {
     margin-bottom: 2rem;
     border: 1px solid $card-bg;
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.3);
     padding: 1rem;
+    height: $courseboxheight;
+    overflow: hidden;
+}
+
+.class-box {
+    border: 1px solid $gray-300;
+    padding: 0;
+    margin-bottom: 2rem;
     height: $courseboxheight;
     overflow: hidden;
 }
@@ -566,8 +559,12 @@ form#enrolform_easy button.btn.btn-primary {
     padding: 1rem;
 }
 
-.course-title {
+.course-title4 {
     padding-top: 1rem;
+}
+
+.course-title {
+    padding: .5rem;
 }
 
 .class-list {
@@ -586,23 +583,31 @@ form#enrolform_easy button.btn.btn-primary {
     padding-top: 5rem;
 }
 
-.class-box .course-summary {
+.class-box4 .course-summary4 {
     height: 4rem;
     overflow: auto;
     margin-bottom: 1rem;
     padding-bottom: 1rem;
 }
 
-.class-box .course-summary::-webkit-scrollbar {
+.class-box .course-summary {
+    height: 4rem;
+    overflow: auto;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    margin:.5rem;
+}
+
+.class-box .course-summary::-webkit-scrollbar, .class-box4 .course-summary4::-webkit-scrollbar {
     width: 7px;
 }
 
-.class-box .course-summary::-webkit-scrollbar-track {
+.class-box .course-summary::-webkit-scrollbar-track, .class-box4 .course-summary4::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 7px rgba(0, 0, 0, 0.3);
     border-radius: 5%;
 }
 
-.class-box .course-summary::-webkit-scrollbar-thumb {
+.class-box .course-summary::-webkit-scrollbar-thumb, .class-box4 .course-summary4::-webkit-scrollbar-thumb {
     background-color: darken($brand-primary, 15%);
     outline: 1px solid slategrey;
 }
@@ -666,7 +671,7 @@ form#enrolform_easy button.btn.btn-primary {
 }
 
 .coursedimmed1 {
-    background-color: rgba(150, 150, 150, 0.9);
+    background-color: rgba($gray-200, 0.9);
 }
 
 .coursedimmed2 {
@@ -677,6 +682,14 @@ form#enrolform_easy button.btn.btn-primary {
 .coursedimmed3 {
     background-color: $gray-600;
     padding: 1rem;
+}
+
+.coursedimmed4 {
+    background-color: rgba(150, 150, 150, 0.9);
+}
+
+.coursedimmed9 {
+    background-color: rgba($secondary, 0.2);
 }
 
 .class-box-courseview {
@@ -777,21 +790,38 @@ ul.teacherscourseview {
     margin: 3rem 0 2rem 0;
 }
 
+.coursestyle9row {
+    padding: 1rem 0;
+    border-bottom: 1px dashed $gray-300;
+}
+
+.coursestyle9row:hover {
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    background-color: $activityhover;
+}
+.hoverhighlight:hover {
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    background-color: $activityhover;
+}
 
 /** 
 * TIDY UP 
 **/
 
-.section-go-link {
-    padding: .25rem;
-    margin: .5rem;
-    background-color: $gray-100;
-    display: inline-block;
-    border: 1px solid $gray-300;
+#page-header .singlebutton {
+    z-index: 1;
+}
+
+.dashtitle {
+    padding-top: .5rem;
 }
 
 .jumpmenu {
     display: inline-block;
+}
+
+.enrolmenticons {
+    float: right;
 }
 
 .course-content ul.topics li.section .left, .course-content ul.topics li.section .right {
@@ -909,21 +939,48 @@ width: $activityiconsize;
     opacity: 1;
 }
 
-// Progress bar fixes
-
-.progress {
-    height: 2rem;
-    width: 50%;
+.mycoursecompletion {
+    float: left;
+    padding-right: 1rem;
 }
 
-.progress_bar {
+.mycoursecompletiontile2 .progress-doughnut {
+    background-color: #fff;
+}
+.mycoursecompletiontile4 .progress-doughnut {
+    background-color: #fff;
+    box-shadow: 0 0 0px 7px rgba(112, 2, 169, 0.5);
+}
+
+.mycoursecompletiontile2 {
+    padding-left: .5rem;
+    padding-top: .5rem;
+}
+
+.mycoursecompletiontile4 {
+    padding-left: .5rem;
+    padding-top: .5rem;
+}
+
+.completiontextposition {
+    color: initial;
+}
+
+// MISTAR SIS Grade Export Page
+.export-group {
     background-color: $gray-100;
-    text-align: center;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    border: 1px solid $gray-200;
+    border-top: 7px solid $spectrum-base;
 }
 
-.progress_bar_completed {
-    background-color: $primary;
-    text-align: right;
+.export-group .col-md-3 label {
+    font-weight: bold;
+}
+
+.export-group .form-group.row.fitem:first-child {
+    border-bottom: 1px solid $gray-300;
 }
 
 //Dashboard no progress icon centered fix
@@ -936,9 +993,26 @@ width: $activityiconsize;
 /**
 * Responsive Fixes
 **/
+
 div#page.container-fluid {
     padding: 0 $gutterwidth;
 }
+
+@if $gutterwidth == 0rem {
+    .row {
+        margin-right: $gutterwidth; 
+        margin-left: $gutterwidth;
+    }
+    .col-12 {
+        padding-right: $gutterwidth;
+        padding-left: $gutterwidth;
+    }
+    #page-wrapper {
+        padding-bottom: $gutterwidth;
+    }
+    
+}
+
 @media screen and (max-width: 576px) {
     div#nav-message-popover-container {display: none;}
     div#nav-notification-popover-container {display: none;}
@@ -992,8 +1066,6 @@ div#page.container-fluid {
     ul.breadcrumb {
         display: inline-block;
         overflow: hidden;
-        border-radius: 5px;
-        background-color:none;
         margin:0px;
         padding:0px;
         background: none;
@@ -1054,10 +1126,51 @@ div#page.container-fluid {
         padding: 0;
         content: "";
     }
+    .dir-rtl ul.breadcrumb li:after{
+        transform: scale(.707) rotate(315deg);
+        box-shadow: -3px -3px 0 1px $card-bg, -2px -3px 0 2px $card-bg;
+    }
 }
 
 @media screen and (max-width: 576px) {
     .breadcrumb {
-        background-color:transparent !important;
+        background-color:transparent;
     }
+}
+
+/**
+* Collapsed Topic Format Fixes
+**/
+ul.ctopics {
+    width: 100%;
+}
+
+/**
+* Media Plugin Styling
+**/
+
+.path-course-view .video-js.vjs-audio {
+    width: 400px;
+}
+
+.path-course-view .mod-indent-outer .mediaplugin {
+    display: contents;
+}
+
+.path-course-view .mediaplugin_videojs>div {
+    margin: initial;
+}
+
+audio.mediaplugin_html5audio {
+    width: 400px;
+    height: 54px;
+    position: initial;
+}
+
+// Navbar Color switch
+nav.fixed-top.navbar.navbar-teacher.navbar-expand.moodle-has-zindex {
+    background-color: $teachernavbarcolor;
+}
+nav.fixed-top.navbar.navbar-student.navbar-expand.moodle-has-zindex {
+    background-color: $studentnavbarcolor;
 }
